# TICKLET-FW

./: .gitignore  README.md
app/: CMakeLists.txt  Kconfig  Kconfig.logging  main.c  prj.conf  west.yml
app/boards/: dnesp32s3b_procpu.overlay
app/boards/alientek/dnesp32s3b/: Kconfig  Kconfig.dnesp32s3b  board.cmake  dnesp32s3b-pinctrl.dtsi  dnesp32s3b_procpu.dts  dnesp32s3b_procpu_defconfig
app/dts/bindings/: vendor-prefixes.txt
